for deploying to github

--- a/cook.html
+++ b/cook.html
@@ -3,10 +3,10 @@
     <head>
         <title>Cooking Website</title>
         <meta name="description" content= "hello"/>
-     <meta name="viewport" content="width-device-width, initial-scale-1">
-     <link rel="icon" href="C:\Users\zaina\Desktop\Assignment1-cookingweb\food.png">
+        <meta name="viewport" content="width-device-width, initial-scale-1"
+        <link rel="icon" href="C:\Users\zaina\Desktop\Assignment1-cookingweb\food.png">
      <link rel="stylesheet" href="style.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
     </head>
     <body>
         <header>
@@ -39,5 +39,5 @@
 <button>Submit</button>
 </form>
     </section>
-    
     </body>
+    </html>
